--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FashionRus</title>
+    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <section class="categorylist">
+        <a href="produktliste.html">Accesories</a>
+        <a href="produktliste.html">Apparel</a>
+        <a href="produktliste.html">Footwear</a>
+        <a href="produktliste.html">Free Items</a>
+        <a href="produktliste.html">Personal Care</a>
+        <a href="produktliste.html">Sporting Goods</a>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
