--- a/produktliste.html
+++ b/produktliste.html
@@ -32,7 +32,7 @@
           <p>Now DKK <span></span>,-</p>
           <p><span></span>%</p>
         </div>
-        <a href="product.html">Read More</a>
+        <a href="produkt.html">Read More</a>
       </article>
       <article class="smallProduct soldOut">
         <img
@@ -46,7 +46,7 @@
           <p>Now DKK <span></span>,-</p>
           <p><span></span>%</p>
         </div>
-        <a href="product.html">Read More</a>
+        <a href="produkt.html">Read More</a>
       </article>
       <article class="smallProduct onSale">
         <img
@@ -60,7 +60,7 @@
           <p>Now DKK <span>1010</span>,-</p>
           <p><span>30</span>%</p>
         </div>
-        <a href="product.html">Read More</a>
+        <a href="produkt.html">Read More</a>
       </article>
       <article class="smallProduct onSale discounted soldOut">
         <img
@@ -74,7 +74,7 @@
           <p>Now DKK <span>1480</span>,-</p>
           <p><span>10</span>%</p>
         </div>
-        <a href="product.html">Read More</a>
+        <a href="produkt.html">Read More</a>
       </article>
     </main>
   </body>
