--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header></header>
+    <header class="mainNav">
+      <a href="index.html">
+        <h1>Fashion<span>R</span>Us</h1>
+      </a>
+      <nav>
+        <a href="index.html">Categories</a>
+        <a href="#">Brands</a>
+        <a href="#">Seasons</a>
+      </nav>
+    </header>
     <main>
       <section class="categorylist">
         <a href="produktliste.html">Accesories</a>
