--- a/produkt.html
+++ b/produkt.html
@@ -7,9 +7,34 @@
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-  </body>
+  <body class="product">
+    <header class="mainNav">
+        <a href="index.html">
+            <h1>Fashion<span>R</span>Us</h1>
+        </a>
+        <nav>
+            <a href="index.html">Categories</a>
+            <a href="index.html">Brands</a>
+            <a href="index.html">Seasons</a>
+        </nav>
+    </header>
+    <main id="productContainer">
+        <figure>
+            <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp" alt="Produktbillede" class="productImage">
+            <span class="saleLabel">Udsalg!</span>
+        </figure>
+        <section class="productDetails">
+            <h2 class="productName">Produktnavn</h2>
+            <div>
+                <p class="articleType"><span class="bold">Type:</span> Caps</p>
+                <p class="productCategory"><span class="bold">Kategori:</span> Accessories</p>
+                <p class="productPrice"><span class="bold">Pris:</span> 699,-</p>
+            </div>
+            <button class="buyButton">Køb nu</button>
+        </section>
+    </main>
+
+
+
+</body>
 </html>
