--- a/produktliste.html
+++ b/produktliste.html
@@ -53,8 +53,8 @@
           src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
           alt="product image"
         />
-        <h3>Mean Team India Cricket Jersey</h3>
-        <p class="subtle">Tshirts | Nike</p>
+        <h3>Black Cardigan</h3>
+        <p class="subtle">Shirts | No brand</p>
         <p class="price">DKK <span>1595</span>,-</p>
         <div class="discounted">
           <p>Now DKK <span>1010</span>,-</p>
@@ -68,7 +68,7 @@
           alt="product image"
         />
         <h3>Deck Navy Blue Backpack</h3>
-        <p class="subtle">Tshirts | Nike</p>
+        <p class="subtle">bagpack | Puma</p>
         <p class="price">DKK <span>1595</span>,-</p>
         <div class="discounted">
           <p>Now DKK <span>1480</span>,-</p>
